--- a/scss/_tenis.scss
+++ b/scss/_tenis.scss
@@ -83,68 +83,143 @@
     }
 }
 
-.contenedorTe-grande-tarjetas{
-    width: 100%;
-    height: 500px;
+.contenedorTe-mejoras-imagnes{
+    height: 650px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-image: url(../assets/imagenes/canchatenis.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: grayscale(100%);
-    .tarjetaTe{
-        width: 300px;
-        height: 90%;
+    flex-direction: row;
+    .contenedorTe-fila-mejoras{
+        background-color: white;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        .titulo-tarjetaTe{
-            width: 100%;
-            height: 50px;
+        justify-content: center;
+        align-items: center;
+        background-image: url(../assets/imagenes/fondoTe.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        .contenedorTe-fila{
+            height: 216.5px;
             display: flex;
             justify-content: center;
             align-items: center;
-            h1{
-                font-size: 0px;
-            }
-            
-        }
-        .parrafo-tarjetaTe{
-            margin-top: 60px;
-            width: 100%;
-            height: 100px;
-            p{
-                font-size: 0px;
-            }  
-        }
-    }
-    &:hover{
-        filter: saturate(200%) grayscale(0%);
-        .tarjetaTe{
-            background-color: rgb(255, 255, 255);
-            border: solid black 1px;
-            .titulo-tarjetaTe{
-                background-color: #ebe6e6;
-                h1{
-                    font-size: 20px;
-                    text-align: center;
+            .contenedorTe-mejoras{
+                height: 70%;
+                display: flex;
+                flex-direction: column;
+                border: solid 1px black; 
+                transition: box-shadow 1s ease;
+                background-color: white;
+                .contenedorTe-titulo-mejoras{
+                    height: 30px;
+                    background-color: rgb(116, 177, 247);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    h1{
+                        color: white;
+                        font-size: 17px;
+                    }
                 }
-            }
-            .parrafo-tarjetaTe{
-                p{
-                    font-size: 16px;
-                    color: black;
+                .contenedorTe-text-mejoras{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 80%;
+                    .parrafoTe-mejoras{
+                        height: 100%;
+                        p{
+                            color: black;
+                        }
+                    }
+                }
+                &:hover{
+                    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
                     
                 }
+
             }
-
         }
-        
-
-    
     }
-    
+    .contenedorTe-imagenes-mejoras{
+        height: 100%;
+        background-color: brown;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        .contenedorTe-columna1-mejoras{
+            height: 100%;
+            background-color: green;
+            display: flex;
+            flex-direction: column;
+            .contenedorTe-imagen1-mejoras{
+                margin-top: 20px;
+                height: 250px;
+                background-color: blue;
+                transition: box-shadow 2s ease;
+                filter: grayscale(100%);
+                .contenedorTe-num-mejoras{
+                    background-color: white;
+                    height: 50px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 10px;
+                    margin-left: 10px;
+                    border-radius: 50%;
+                    h1{
+                        align-items: center;
+                    }
+                }
+                &:hover{
+                    filter: saturate(200%);
+                    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3); 
+                }
+            }
+            
+
+            .contenedorTe-imagen2-mejoras{
+                margin-top: 130px;
+                margin-left: 50px;
+                height: 200px;
+                background-color: black;
+                .contenedorTe-num-mejoras{
+                    background-color: white;
+                    height: 50px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 10px;
+                    margin-left: 10px;
+                    border-radius: 55%;
+                    h1{
+                        align-items: center;
+                    }
+                }
+            }
+        }
+        .contenedorTe-columna2-mejoras{
+            height: 100%;
+            background-color: aqua;
+            display: flex;
+            justify-content: center;
+            .contenedorTe-imagen3-mejoras{
+                height: 400px;
+                background-color: green;
+                margin-top: 150px;
+                .contenedorTe-num-mejoras{
+                    background-color: white;
+                    height: 50px;
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 10px;
+                    margin-left: 10px;
+                    border-radius: 55%;
+                    h1{
+                        align-items: center;
+                    }
+                }
+            }   
+        }
+    }
 }
 
 
