--- a/css/main.css
+++ b/css/main.css
@@ -144,49 +144,117 @@
   .contenedorTe-espacio-titulo .tituloTe-espacio {
     color: black; }
 
-.contenedorTe-grande-tarjetas {
-  width: 100%;
-  height: 500px;
+.contenedorTe-mejoras-imagnes {
+  height: 650px;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-image: url(../assets/imagenes/canchatenis.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: grayscale(100%); }
-  .contenedorTe-grande-tarjetas .tarjetaTe {
-    width: 300px;
-    height: 90%;
+  flex-direction: row; }
+  .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras {
+    background-color: white;
+    height: 100%;
     display: flex;
-    flex-direction: column; }
-    .contenedorTe-grande-tarjetas .tarjetaTe .titulo-tarjetaTe {
-      width: 100%;
-      height: 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../assets/imagenes/fondoTe.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+    .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila {
+      height: 216.5px;
       display: flex;
       justify-content: center;
       align-items: center; }
-      .contenedorTe-grande-tarjetas .tarjetaTe .titulo-tarjetaTe h1 {
-        font-size: 0px; }
-    .contenedorTe-grande-tarjetas .tarjetaTe .parrafo-tarjetaTe {
-      margin-top: 60px;
-      width: 100%;
-      height: 100px; }
-      .contenedorTe-grande-tarjetas .tarjetaTe .parrafo-tarjetaTe p {
-        font-size: 0px; }
-  .contenedorTe-grande-tarjetas:hover {
-    filter: saturate(200%) grayscale(0%); }
-    .contenedorTe-grande-tarjetas:hover .tarjetaTe {
-      background-color: white;
-      border: solid black 1px; }
-      .contenedorTe-grande-tarjetas:hover .tarjetaTe .titulo-tarjetaTe {
-        background-color: #ebe6e6; }
-        .contenedorTe-grande-tarjetas:hover .tarjetaTe .titulo-tarjetaTe h1 {
-          font-size: 20px;
-          text-align: center; }
-      .contenedorTe-grande-tarjetas:hover .tarjetaTe .parrafo-tarjetaTe p {
-        font-size: 16px;
-        color: black; }
+      .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila .contenedorTe-mejoras {
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        border: solid 1px black;
+        transition: box-shadow 1s ease;
+        background-color: white; }
+        .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila .contenedorTe-mejoras .contenedorTe-titulo-mejoras {
+          height: 30px;
+          background-color: #74b1f7;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila .contenedorTe-mejoras .contenedorTe-titulo-mejoras h1 {
+            color: white;
+            font-size: 17px; }
+        .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila .contenedorTe-mejoras .contenedorTe-text-mejoras {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 80%; }
+          .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila .contenedorTe-mejoras .contenedorTe-text-mejoras .parrafoTe-mejoras {
+            height: 100%; }
+            .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila .contenedorTe-mejoras .contenedorTe-text-mejoras .parrafoTe-mejoras p {
+              color: black; }
+        .contenedorTe-mejoras-imagnes .contenedorTe-fila-mejoras .contenedorTe-fila .contenedorTe-mejoras:hover {
+          box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3); }
+  .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras {
+    height: 100%;
+    background-color: brown;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
+    .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras {
+      height: 100%;
+      background-color: green;
+      display: flex;
+      flex-direction: column; }
+      .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras .contenedorTe-imagen1-mejoras {
+        margin-top: 20px;
+        height: 250px;
+        background-color: blue;
+        transition: box-shadow 2s ease;
+        filter: grayscale(100%); }
+        .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras .contenedorTe-imagen1-mejoras .contenedorTe-num-mejoras {
+          background-color: white;
+          height: 50px;
+          display: flex;
+          justify-content: center;
+          margin-top: 10px;
+          margin-left: 10px;
+          border-radius: 50%; }
+          .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras .contenedorTe-imagen1-mejoras .contenedorTe-num-mejoras h1 {
+            align-items: center; }
+        .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras .contenedorTe-imagen1-mejoras:hover {
+          filter: saturate(200%);
+          box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3); }
+      .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras .contenedorTe-imagen2-mejoras {
+        margin-top: 130px;
+        margin-left: 50px;
+        height: 200px;
+        background-color: black; }
+        .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras .contenedorTe-imagen2-mejoras .contenedorTe-num-mejoras {
+          background-color: white;
+          height: 50px;
+          display: flex;
+          justify-content: center;
+          margin-top: 10px;
+          margin-left: 10px;
+          border-radius: 55%; }
+          .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna1-mejoras .contenedorTe-imagen2-mejoras .contenedorTe-num-mejoras h1 {
+            align-items: center; }
+    .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna2-mejoras {
+      height: 100%;
+      background-color: aqua;
+      display: flex;
+      justify-content: center; }
+      .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna2-mejoras .contenedorTe-imagen3-mejoras {
+        height: 400px;
+        background-color: green;
+        margin-top: 150px; }
+        .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna2-mejoras .contenedorTe-imagen3-mejoras .contenedorTe-num-mejoras {
+          background-color: white;
+          height: 50px;
+          display: flex;
+          justify-content: center;
+          margin-top: 10px;
+          margin-left: 10px;
+          border-radius: 55%; }
+          .contenedorTe-mejoras-imagnes .contenedorTe-imagenes-mejoras .contenedorTe-columna2-mejoras .contenedorTe-imagen3-mejoras .contenedorTe-num-mejoras h1 {
+            align-items: center; }
 
 /* mapa */
 .contenedorTe-grande-mapa {
@@ -288,6 +356,96 @@
       font-size: 16px;
       margin: 4px 0px 6px 5px;
       color: black; }
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  color: white; }
+
+footer {
+  background: #343434;
+  padding-top: 50px; }
+
+.container {
+  width: 1140px;
+  margin: auto;
+  display: flex;
+  justify-content: center; }
+
+.footer-content {
+  width: 33.5%; }
+
+h3 {
+  font-size: 28px;
+  margin-bottom: 15px;
+  text-align: center; }
+
+.footer-content p {
+  width: 190px;
+  margin: auto;
+  padding: 7px; }
+
+.footer-content ul {
+  text-align: center; }
+
+.list {
+  padding: 0; }
+
+.list li {
+  width: auto;
+  text-align: center;
+  list-style-type: none;
+  padding: 7px;
+  position: relative; }
+
+.list li::before {
+  content: "";
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 100%;
+  width: 0;
+  height: 2px;
+  background: #f18930;
+  transition-duration: .5s; }
+
+.list li:hover::before {
+  width: 70px; }
+
+.social-icons {
+  text-align: center;
+  padding: 0; }
+
+.social-icons li {
+  display: inline-block;
+  text-align: center;
+  padding: 25px; }
+
+.social-icons i {
+  color: #af3232;
+  padding: 25px; }
+
+a {
+  text-decoration: none; }
+
+a:hover {
+  color: #f18930; }
+
+.social-icons i:hover {
+  color: #f18930; }
+
+.bottom-bar {
+  background: #f18930;
+  text-align: center;
+  padding: 10px 0;
+  margin-top: 50px; }
+
+.bottom-bar p {
+  color: #343434;
+  margin: 0;
+  font-size: 16px; }
 
 * {
   padding: 0;
