--- a/css/main.css
+++ b/css/main.css
@@ -361,11 +361,83 @@ body {
     height: 400px;
     border-radius: 25px; }
 
-.secciones {
+.tarjetas {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  column-gap: 30px; }
+  .tarjetas .tarjetas-titulo {
+    margin: 50px 0px 50px 0px;
+    text-align: center; }
+    .tarjetas .tarjetas-titulo h2 {
+      font-size: 35px; }
+  .tarjetas .tarjetas-tarjeta {
+    height: 400px; }
+    .tarjetas .tarjetas-tarjeta img {
+      margin-top: 10px;
+      height: 40%; }
+
+#compensacion {
+  margin-top: 0px; }
+
+.dietas {
+  overflow-x: hidden;
+  height: 1750px;
   margin: 50px 0px 50px 0px;
-  text-align: center; }
-  .secciones h2 {
-    font-size: 35px; }
+  display: flex;
+  justify-content: center; }
+  .dietas .dietas-info {
+    margin: 50px 0px -100px 0px;
+    height: 300px;
+    display: flex; }
+    .dietas .dietas-info .dietas-info-pez {
+      height: 500px; }
+      .dietas .dietas-info .dietas-info-pez img {
+        height: 100%;
+        transform: translateX(-300px) translateY(40px) rotate(45deg); }
+    .dietas .dietas-info .dietas-info-tituyparraf {
+      z-index: 2;
+      text-align: center;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; }
+      .dietas .dietas-info .dietas-info-tituyparraf h2 {
+        margin: 50px; }
+  .dietas .dietas-recetas, .dietas .dietas-recetas-2 {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 50px; }
+    .dietas .dietas-recetas img, .dietas .dietas-recetas-2 img {
+      transform: translateX(-60px) translateY(40px) rotate(-50deg); }
+    .dietas .dietas-recetas .dietas-recetas-receta, .dietas .dietas-recetas-2 .dietas-recetas-receta {
+      display: flex;
+      flex-direction: column;
+      height: 600px;
+      background-color: seagreen;
+      border-radius: 25px;
+      justify-content: center;
+      text-align: center;
+      border: 4px solid white;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); }
+      .dietas .dietas-recetas .dietas-recetas-receta h3, .dietas .dietas-recetas-2 .dietas-recetas-receta h3 {
+        margin-bottom: 30px;
+        color: white; }
+      .dietas .dietas-recetas .dietas-recetas-receta p, .dietas .dietas-recetas-2 .dietas-recetas-receta p {
+        text-align: start;
+        margin: 0px 30px 0px 30px; }
+        .dietas .dietas-recetas .dietas-recetas-receta p strong, .dietas .dietas-recetas-2 .dietas-recetas-receta p strong {
+          color: white; }
+  .dietas .dietas-recetas-2 #img1 {
+    transform: translateX(-320px) translateY(40px) rotate(100deg); }
+  .dietas .dietas-recetas-2 #img2 {
+    transform: translateX(-40px) translateY(90px) rotate(0deg); }
+
+footer {
+  height: 700px;
+  background-color: aquamarine; }
 
 @media screen and (max-width: 1023px) {
   .nutricion {
