--- a/scss/_nutricion.scss
+++ b/scss/_nutricion.scss
@@ -42,12 +42,109 @@ body{
     }
 }
 
-.secciones{
-    margin: 50px 0px 50px 0px;
-    text-align: center;
-    h2{
-        font-size: 35px;
+
+
+.tarjetas{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    .tarjetas-titulo{
+        margin: 50px 0px 50px 0px;
+        text-align: center;
+        h2{
+            font-size: 35px;
+        }
     }
+    .tarjetas-tarjeta{
+        height: 400px;
+        img{
+            margin-top: 10px;
+            height: 40%;
+        }
+    }
+}
+
+#compensacion{
+    margin-top: 0px;
+}
+
+.dietas{
+    overflow-x: hidden;
+    height: 1750px;
+    margin: 50px 0px 50px 0px;
+    display: flex;
+    justify-content: center;
+    .dietas-info{
+        margin: 50px 0px -100px 0px;
+        height: 300px;
+        display: flex;
+        .dietas-info-pez{
+            height: 500px;
+            img{
+                height: 100%;
+                transform: translateX(-300px) translateY(40px) rotate(45deg); 
+            }
+        }
+        .dietas-info-tituyparraf{
+            z-index: 2;
+            text-align: center;
+            height: 200px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            h2{
+                margin: 50px;
+            }
+        }
+    }
+    .dietas-recetas{
+        display: flex;
+        justify-content: space-evenly;
+        margin: 50px;
+        img{
+            transform: translateX(-60px) translateY(40px) rotate(-50deg); 
+        }
+        .dietas-recetas-receta{
+            display: flex;
+            flex-direction: column;
+            height: 600px;
+            background-color: seagreen;
+            border-radius: 25px;
+            justify-content: center;
+            text-align: center;
+            border: 4px solid white;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); 
+            h3{
+                margin-bottom: 30px;
+                color: white;
+            }
+            p{
+                text-align: start;
+                margin: 0px 30px 0px 30px;
+                strong{
+                    color: white;
+                }
+            }
+            
+        }
+    }
+    .dietas-recetas-2{
+        @extend .dietas-recetas;
+        #img1{
+            transform: translateX(-320px) translateY(40px) rotate(100deg); 
+        }
+        #img2{
+            transform: translateX(-40px) translateY(90px) rotate(00deg); 
+        }
+    }
+}
+
+footer{
+    height: 700px;
+    background-color: aquamarine;
 }
 
 @media screen and (max-width: 1023px){
