--- a/css/main.css
+++ b/css/main.css
@@ -521,26 +521,26 @@ body {
       margin-top: 10px;
       height: 40%; }
 
-#margen-dietas {
+#margen-dietas, #margen-rutinas {
   margin: 0;
   padding: 0; }
 
-.dietas {
+.dietas, .rutinas {
   overflow-x: hidden;
   height: 1750px;
   margin: 50px 0px 50px 0px;
   display: flex;
   justify-content: center; }
-  .dietas .dietas-info {
+  .dietas .dietas-info, .rutinas .dietas-info, .rutinas .rutinas-info {
     margin: 50px 0px -100px 0px;
     height: 300px;
     display: flex; }
-    .dietas .dietas-info .dietas-info-pez {
+    .dietas .dietas-info .dietas-info-pez, .rutinas .dietas-info .dietas-info-pez, .rutinas .rutinas-info .dietas-info-pez, .rutinas .rutinas-info .rutinas-info-img1 {
       height: 500px; }
-      .dietas .dietas-info .dietas-info-pez img {
+      .dietas .dietas-info .dietas-info-pez img, .rutinas .dietas-info .dietas-info-pez img, .rutinas .rutinas-info .dietas-info-pez img, .rutinas .rutinas-info .rutinas-info-img1 img {
         height: 100%;
         transform: translateX(-300px) translateY(40px) rotate(45deg); }
-    .dietas .dietas-info .dietas-info-tituyparraf {
+    .dietas .dietas-info .dietas-info-tituyparraf, .rutinas .dietas-info .dietas-info-tituyparraf, .rutinas .rutinas-info .dietas-info-tituyparraf, .rutinas .rutinas-info .rutinas-info-tituyparraf {
       z-index: 2;
       text-align: center;
       height: 200px;
@@ -548,15 +548,15 @@ body {
       flex-direction: column;
       align-items: center;
       justify-content: center; }
-      .dietas .dietas-info .dietas-info-tituyparraf h2 {
+      .dietas .dietas-info .dietas-info-tituyparraf h2, .rutinas .dietas-info .dietas-info-tituyparraf h2, .rutinas .rutinas-info .dietas-info-tituyparraf h2, .rutinas .rutinas-info .rutinas-info-tituyparraf h2 {
         margin: 50px; }
-  .dietas .dietas-recetas, .dietas .dietas-recetas-2 {
+  .dietas .dietas-recetas, .rutinas .dietas-recetas, .dietas .dietas-recetas-2, .rutinas .dietas-recetas-2, .rutinas .rutinas-instrucciones, .rutinas .rutinas-instrucciones-2 {
     display: flex;
     justify-content: space-evenly;
     margin: 50px; }
-    .dietas .dietas-recetas img, .dietas .dietas-recetas-2 img {
+    .dietas .dietas-recetas img, .rutinas .dietas-recetas img, .dietas .dietas-recetas-2 img, .rutinas .dietas-recetas-2 img, .rutinas .rutinas-instrucciones img, .rutinas .rutinas-instrucciones-2 img {
       transform: translateX(-60px) translateY(40px) rotate(-50deg); }
-    .dietas .dietas-recetas .dietas-recetas-receta, .dietas .dietas-recetas-2 .dietas-recetas-receta {
+    .dietas .dietas-recetas .dietas-recetas-receta, .rutinas .dietas-recetas .dietas-recetas-receta, .dietas .dietas-recetas-2 .dietas-recetas-receta, .rutinas .dietas-recetas-2 .dietas-recetas-receta, .rutinas .rutinas-instrucciones .dietas-recetas-receta, .rutinas .rutinas-instrucciones-2 .dietas-recetas-receta, .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso {
       display: flex;
       flex-direction: column;
       height: 600px;
@@ -566,18 +566,48 @@ body {
       text-align: center;
       border: 4px solid white;
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); }
-      .dietas .dietas-recetas .dietas-recetas-receta h3, .dietas .dietas-recetas-2 .dietas-recetas-receta h3 {
+      .dietas .dietas-recetas .dietas-recetas-receta h3, .rutinas .dietas-recetas .dietas-recetas-receta h3, .dietas .dietas-recetas-2 .dietas-recetas-receta h3, .rutinas .dietas-recetas-2 .dietas-recetas-receta h3, .rutinas .rutinas-instrucciones .dietas-recetas-receta h3, .rutinas .rutinas-instrucciones-2 .dietas-recetas-receta h3, .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso h3, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso h3 {
         margin-bottom: 30px;
         color: white; }
-      .dietas .dietas-recetas .dietas-recetas-receta p, .dietas .dietas-recetas-2 .dietas-recetas-receta p {
+      .dietas .dietas-recetas .dietas-recetas-receta p, .rutinas .dietas-recetas .dietas-recetas-receta p, .dietas .dietas-recetas-2 .dietas-recetas-receta p, .rutinas .dietas-recetas-2 .dietas-recetas-receta p, .rutinas .rutinas-instrucciones .dietas-recetas-receta p, .rutinas .rutinas-instrucciones-2 .dietas-recetas-receta p, .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso p, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso p {
         text-align: start;
         margin: 0px 30px 0px 30px; }
-        .dietas .dietas-recetas .dietas-recetas-receta p strong, .dietas .dietas-recetas-2 .dietas-recetas-receta p strong {
+        .dietas .dietas-recetas .dietas-recetas-receta p strong, .rutinas .dietas-recetas .dietas-recetas-receta p strong, .dietas .dietas-recetas-2 .dietas-recetas-receta p strong, .rutinas .dietas-recetas-2 .dietas-recetas-receta p strong, .rutinas .rutinas-instrucciones .dietas-recetas-receta p strong, .rutinas .rutinas-instrucciones-2 .dietas-recetas-receta p strong, .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso p strong, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso p strong {
           color: white; }
-  .dietas .dietas-recetas-2 #img1 {
+  .dietas .dietas-recetas-2 #img1, .rutinas .dietas-recetas-2 #img1 {
     transform: translateX(-320px) translateY(40px) rotate(100deg); }
-  .dietas .dietas-recetas-2 #img2 {
+  .dietas .dietas-recetas-2 #img2, .rutinas .dietas-recetas-2 #img2 {
     transform: translateX(-40px) translateY(90px) rotate(0deg); }
+
+.rutinas .rutinas-info .rutinas-info-img1 img {
+  height: 100%;
+  transform: translateX(-300px) translateY(40px) rotate(45deg); }
+
+.rutinas .rutinas-info .rutinas-info-tituyparraf h2 {
+  margin: 50px; }
+
+.rutinas .rutinas-instrucciones img, .rutinas .rutinas-instrucciones-2 img {
+  transform: translateX(-60px) translateY(40px) rotate(-50deg); }
+
+.rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso {
+  background-color: #3e3ea1; }
+  .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso li, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso li {
+    margin: 0px 10px 0px 50px;
+    text-align: start; }
+  .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso h3, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso h3 {
+    margin-bottom: 30px;
+    color: white; }
+  .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso p, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso p {
+    text-align: start;
+    margin: 0px 30px 0px 30px; }
+    .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso p strong, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso p strong {
+      color: white; }
+
+.rutinas .rutinas-instrucciones-2 #img1 {
+  transform: translateX(-320px) translateY(40px) rotate(100deg); }
+
+.rutinas .rutinas-instrucciones-2 #img2 {
+  transform: translateX(-40px) translateY(90px) rotate(0deg); }
 
 @media screen and (max-width: 1023px) {
   /*NUTRICION INFO PRINC*/
@@ -594,19 +624,19 @@ body {
     .nutricion .nutricion-carrousel img {
       height: 250px; }
   /*DIETAS*/
-  .dietas {
+  .dietas, .rutinas {
     height: 3300px; }
-    .dietas .dietas-info .dietas-info-pez img {
+    .dietas .dietas-info .dietas-info-pez img, .rutinas .dietas-info .dietas-info-pez img, .rutinas .rutinas-info .dietas-info-pez img, .rutinas .rutinas-info .rutinas-info-img1 img {
       height: 1px; }
-    .dietas .dietas-recetas, .dietas .dietas-recetas-2 {
+    .dietas .dietas-recetas, .rutinas .dietas-recetas, .dietas .dietas-recetas-2, .rutinas .dietas-recetas-2, .rutinas .rutinas-instrucciones, .rutinas .rutinas-instrucciones-2 {
       display: block; }
-      .dietas .dietas-recetas img, .dietas .dietas-recetas-2 img {
+      .dietas .dietas-recetas img, .rutinas .dietas-recetas img, .dietas .dietas-recetas-2 img, .rutinas .dietas-recetas-2 img, .rutinas .rutinas-instrucciones img, .rutinas .rutinas-instrucciones-2 img {
         height: 1px; }
-      .dietas .dietas-recetas .dietas-recetas-receta, .dietas .dietas-recetas-2 .dietas-recetas-receta {
+      .dietas .dietas-recetas .dietas-recetas-receta, .rutinas .dietas-recetas .dietas-recetas-receta, .dietas .dietas-recetas-2 .dietas-recetas-receta, .rutinas .dietas-recetas-2 .dietas-recetas-receta, .rutinas .rutinas-instrucciones .dietas-recetas-receta, .rutinas .rutinas-instrucciones-2 .dietas-recetas-receta, .rutinas .rutinas-instrucciones .rutinas-instrucciones-pasoapaso, .rutinas .rutinas-instrucciones-2 .rutinas-instrucciones-pasoapaso {
         height: 650px; }
-    .dietas .dietas-recetas-2 #img1 {
+    .dietas .dietas-recetas-2 #img1, .rutinas .dietas-recetas-2 #img1 {
       height: 1px; }
-    .dietas .dietas-recetas-2 #img2 {
+    .dietas .dietas-recetas-2 #img2, .rutinas .dietas-recetas-2 #img2 {
       height: 1px; } }
 
 * {
