--- a/scss/_nutricion.scss
+++ b/scss/_nutricion.scss
@@ -145,6 +145,65 @@ body{
 
 
 
+#margen-rutinas{
+    @extend #margen-dietas ;
+}
+
+.rutinas{
+    @extend.dietas ;
+    .rutinas-info{
+        @extend .dietas-info;
+        .rutinas-info-img1{
+            @extend .dietas-info-pez;
+            img{
+                height: 100%;
+                transform: translateX(-300px) translateY(40px) rotate(45deg); 
+            }
+        }
+        .rutinas-info-tituyparraf{
+            @extend .dietas-info-tituyparraf;
+            h2{
+                margin: 50px;
+            }
+
+        }
+    }
+    .rutinas-instrucciones{
+        @extend .dietas-recetas;
+        img{
+            transform: translateX(-60px) translateY(40px) rotate(-50deg); 
+        }
+        .rutinas-instrucciones-pasoapaso{
+            li{
+                margin: 0px 10px 0px 50px;
+                text-align: start
+            }
+            @extend .dietas-recetas-receta;
+            background-color: #3e3ea1;
+            h3{
+                margin-bottom: 30px;
+                color: white;
+            }
+            p{
+                text-align: start;
+                margin: 0px 30px 0px 30px;
+                strong{
+                    color: white;
+                }
+            }
+        }
+    }
+    .rutinas-instrucciones-2{
+        @extend .rutinas-instrucciones;
+        #img1{
+            transform: translateX(-320px) translateY(40px) rotate(100deg); 
+        }
+        #img2{
+            transform: translateX(-40px) translateY(90px) rotate(00deg); 
+        }
+    }
+}
+
 @media screen and (max-width: 1023px){
 
     /*NUTRICION INFO PRINC*/
@@ -179,8 +238,6 @@ body{
                 img{
                     height: 1px;
                 }
-            }
-            .dietas-info-tituyparraf{
             }
         }
         .dietas-recetas{
